<resources>
    <string name="app_name">FarmersMarket</string>
    <string name="un">Username</string>
    <string name="pwd">Password</string>
    <string name="save_farmer_info">Save Information</string>
    <string name="input_farmer_phone_number">Phone Number</string>
    <string name="input_farmer_email">Email</string>
    <string name="input_farmer_bio">About Me</string>
    <string name="title_farmer_account">My Account</string>

    <string name="product0_name">Basil</string>
    <string name="product0_description">The fragrant, sweet smell and peppery taste is key to making a great pesto as well as tomato-based pasta sauces.</string>
    <string name="product0_expiration">2-3 Years</string>

    <string name="product1_name">Sweet Corn</string>
    <string name="product1_description">GRILLING husked sweet corn directly on the flame caramelizes the sugar in the kernels and tightens their texture, particularly sugar-enhanced varieties.</string>
    <string name="product1_expiration">1-3 days</string>

    <string name="product2_name">Garlic</string>
    <string name="product2_description">creamy cloves with a nutty, mild taste</string>
    <string name="product2_expiration">3-5 months</string>

    <string name="product3_name">Wheat</string>
    <string name="product3_description">seeds could be stored for long periods in a dry climate, and can be used for bread</string>
    <string name="product3_expiration">6 months</string>

    <string name="product4_name">Cherry Tomatoes</string>
    <string name="product4_description">small round tomato believed to be an intermediate genetic admixture between wild currant-type tomatoes and domesticated garden tomatoes. Cherry tomatoes range in size from a thumbtip up to the size of a golf ball, and can range from spherical to slightly oblong in shape.</string>
    <string name="product4_expiration">5 days</string>

    <string name="product5_name">Black Beans</string>
    <string name="product5_description">shell-like appearance, black beans are, in fact, the edible seeds of the plant</string>
    <string name="product5_expiration">3-5 years</string>

    <string name="product6_name">Rice</string>
    <string name="product6_description">Broken rice is used in brewing, distilling, and in the manufacture of starch and rice flour. Hulls are used for fuel, packing material, industrial grinding, fertilizer manufacture, and in the manufacture of an industrial chemical called furfural.</string>
    <string name="product6_expiration">6 months</string>

    <string name="product7_name">Potatoes</string>
    <string name="product7_description">Fresh potatoes are baked, boiled, or fried and used in a staggering range of recipes</string>
    <string name="product7_expiration">3-5 months</string>

    <string name="product8_name">Oats</string>
    <string name="product8_description">rolled or crushed into oatmeal, or ground into fine oat flour. Oatmeal is chiefly eaten as porridge, but may also be used in a variety of baked goods, such as oatcakes, oatmeal cookies and oat bread.</string>
    <string name="product8_expiration">12 months</string>

    <string name="product9_name">Coconuts</string>
    <string name="product9_description">used primarily for the extraction of coconut oil for use in cooking. ... The seed is protected by a thick, stony shell, or endocarp, and is partially filled with a liquid known as coconut water.</string>
    <string name="product9_expiration">6-8 months</string>

    <string name="product10_name">Mangoes</string>
    <string name="product10_description">The fruit is a drupe, with an outer flesh surrounding a stone.</string>
    <string name="product10_expiration">5 days</string>

    <string name="product11_name">Strawberries</string>
    <string name="product11_description">soft, sweet, bright red berries. They\'re also delicious. Strawberries have tiny edible seeds, which grow all
over their surface.</string>
    <string name="product11_expiration">3-7 days</string>

    <string name="product12_name">Bananas</string>
    <string name="product12_description">curved, yellow fruit with a thick skin and soft sweet flesh.</string>
    <string name="product12_expiration">5-7 days</string>

    <string name="product13_name">Plantains</string>
    <string name="product13_description">resembles a banana and is almost always cooked. ... Plantains are very starchy, green, and not as sweet as bananas.</string>
    <string name="product13_expiration">5-7 days</string>

    <string name="product14_name">Coffee Beans</string>
    <string name="product14_description">It is the pit inside the red or purple fruit often referred to as a cherry. Just like ordinary cherries, the
coffee fruit is also a so-called stone fruit.</string>
    <string name="product14_expiration">9 months</string>

    <string name="product15_name">Grapes</string>
    <string name="product15_description">fleshy, rounded fruits that grow in clusters made up of many fruits of greenish, yellowish or purple skin.</string>
    <string name="product15_expiration">7-14 days</string>

    <string name="product16_name">Olives</string>
    <string name="product16_description">subtropical broad-leaved evergreen tree (family Oleaceae) and its edible fruit</string>
    <string name="product16_expiration">12-18 months</string>

    <string name="product17_name">Soybeans</string>
    <string name="product17_description">an erect bush with woody stems and alternately arranged leaves</string>
    <string name="product17_expiration">2-3 years</string>

    <string name="farmer0_name">Jack Street</string>
    <string name="farmer0_bio">Jack Street is a clever farmer from Lawrence. He enjoys Carpentry in his free time.</string>

    <string name="farmer1_name">Sam Reed</string>
    <string name="farmer1_bio">Sam Reed is a forward-thinking farmer from Stockholm. He enjoys Carpentry in his free time.</string>

    <string name="farmer2_name">Steve Parker</string>
    <string name="farmer2_bio">Steve Parker is a powerful farmer from Lawrence. He enjoys Hunting in his free time.</string>

    <string name="farmer3_name">Sam Fig</string>
    <string name="farmer3_bio">Sam Fig is a powerful farmer from Lenexa. He enjoys Carpentry in his free time.</string>

    <string name="farmer4_name">Jim Parker</string>
    <string name="farmer4_bio">Jim Parker is a clever farmer from Stockholm. He enjoys Fishing in his free time.</string>

    <string name="farmer5_name">Bill Street</string>
    <string name="farmer5_bio">Bill Street is a wise farmer from Lawrence. He enjoys Fishing in his free time.</string>

    <string name="farmer6_name">Joe Fig</string>
    <string name="farmer6_bio">Joe Fig is a clever farmer from Wichita. He enjoys Spending Time with Family in his free time.</string>

    <string name="farmer7_name">Joe Parker</string>
    <string name="farmer7_bio">Joe Parker is a powerful farmer from Lenexa. He enjoys Carpentry in his free time.</string>

    <string name="farmer8_name">Mike Street</string>
    <string name="farmer8_bio">Mike Street is a clever farmer from Stockholm. He enjoys Spending Time with Family in his free time.</string>

    <string name="farmer9_name">Mike Street</string>
    <string name="farmer9_bio">Mike Street is a clever farmer from Lawrence. He enjoys Spending Time with Family in his free time.</string>
</resources>
