<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="30sp"
        xmlns:android="http://schemas.android.com/apk/res/android"

    android:background="#4CAF50">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textAllCaps="true"
            android:background="@color/colorAccent"
            android:fontFamily="sans-serif-black"
            android:textSize="40sp"
            android:gravity="center"
            android:textColor="#CDDC39"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/un"
                android:layout_marginBottom="10sp"
                android:id="@+id/cUsername"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pwd"
                android:inputType="textPassword"
                android:id="@+id/cPassword"
                android:layout_marginBottom="30sp"
                />

            <Button
                android:id="@+id/cLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFEB3B"
                android:layout_marginBottom="10sp"
                android:text="Login" />
            <Button
                android:id="@+id/cForgotPwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#8BC34A"
                android:onClick="cOnClickForgotPwd"
                android:text="Forgot Password" />

            <Button
                android:id="@+id/SignUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="cOnClickSignUp"
                android:text="Button"
                tools:text="Sign Up" />


        </LinearLayout>

    </LinearLayout>
